--- a/loader/Cargo.toml
+++ b/loader/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-
 dotenvy = "^0.15"
+env_logger = "0.10.0"
+graphql_client = { version = "0.13.0", features = ["reqwest-blocking"] }
+log = "0.4.19"
+reqwest = { version = "0.11.18", features = ["json", "blocking"] }
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+thiserror = "1"
