--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ dotenvy = "^0.15"
 env_logger = "0.10.0"
 graphql_client = { version = "0.13.0", features = ["reqwest-blocking"] }
 log = "0.4.19"
-reqwest = { version = "0.11.18", features = ["json", "blocking"] }
+reqwest = { version = "0.11.18", default-features = false, features = [
+    "json",
+    "blocking",
+    "rustls-tls",
+] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 thiserror = "1"
