--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,6 +2,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 * * * 6,0,1"
+permissions:
+  contents: write
 env:
   CARGO_TERM_COLOR: always
 name: weekly update
@@ -12,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: perform update and push commits
+      - name: Build and run loader tool
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -25,12 +27,15 @@ jobs:
 
           # Execute loader
           ./loader
-
+      - name: Push changes to data branch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           # Setup Github
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
           # Push changes
-          git add data/ranked.json
-          git commit -m "Weekly ranking update"
+          git add data/**.json
+          git commit -am "Automated update"
           git push origin
