--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = { version = "^0.4", features = ["serde"] }
 dotenvy = "^0.15"
 env_logger = "0.10.0"
 graphql_client = { version = "0.13.0", features = ["reqwest-blocking"] }
