--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,6 +12,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Build loader tool
+        env:
+          CARGO_TERM_COLOR: always
+        run: |
+          # Build the loader
+          cargo build --release
+
       - name: Setup git
         run: |
           # Setup Github
@@ -20,16 +28,11 @@ jobs:
 
           # Switch to data branch
           git checkout -b data origin/data
-
-      - name: Build and run loader tool
+      - name: Execute loader tool
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CARGO_TERM_COLOR: always
           RUST_LOG: debug
         run: |
-          # Build the loader
-          cargo build --release 
-
           # Copy binary and make executable
           cp target/release/committers-loader loader
           chmod +x loader
