Working on astro website and badges

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.6.6"
+    "astro": "^2.6.6",
+    "badge-maker": "^3.3.1"
   }
 }
