--- a/.github/workflows/blacklist.yml
+++ b/.github/workflows/blacklist.yml
@@ -1,10 +1,10 @@
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: "0 * * * 6,0,1"
+  push:
+    paths:
+      - blacklist.txt
 permissions:
   contents: write
-name: weekly update
+name: blacklist update
 jobs:
   weekly_update:
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
           chmod +x loader
 
           # Execute loader
-          ./loader
+          ./loader blacklist
 
           # Copy output for frontend
           cp data/output.json frontend/data/output.json
