--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,6 @@
   "dependencies": {
     "astro": "^2.6.6",
     "badge-maker": "^3.3.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
